--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--style.css-->
         <link rel="stylesheet" href="assets/css/style.css">
         
-        <!--responsive.css-->
+        <!--responsi ve.css-->
         <link rel="stylesheet" href="assets/css/responsive.css">
         
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -70,7 +70,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">browny</a>
+			                <a class="navbar-brand" href="index.html">Browny</a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
@@ -831,7 +831,10 @@
 						<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
 								<div class="contact-form">
-									<form>
+									<form
+										action="https://formspree.io/f/mkndjajv"
+										method="POST"
+									>
 										<div class="row">
 											<div class="col-sm-6 col-xs-12">
 												<div class="form-group">
@@ -861,7 +864,8 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="single-contact-btn">
-													<a class="contact-btn" href="#" role="button">submit</a>
+													<!-- <a class="contact-btn" href="#" role="button">submit</a> -->
+													<button type="submit" class="contact-btn">Submit</button>
 												</div><!--/.single-single-contact-btn-->
 											</div><!--/.col-->
 										</div><!--/.row-->
