Button is now buttoning

--- a/index.html
+++ b/index.html
@@ -861,14 +861,23 @@
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
+										
+
 										<div class="row">
 											<div class="col-sm-12">
-												<div class="single-contact-btn">
-													<!-- <a class="contact-btn" href="#" role="button">submit</a> -->
-													<button type="submit" class="contact-btn">Submit</button>
-												</div><!--/.single-single-contact-btn-->
-											</div><!--/.col-->
-										</div><!--/.row-->
+												<button class="single-contact-btn col-sm-12">
+													Submit
+												</button>
+											</div>
+											<!-- <div class="col-sm-12">
+												<div class="single-contact-btn contact-btn">
+													<a href="#" class="contact-btn" role="button">
+														Submit
+														<button type="submit">Submit</button>
+													</a> -->
+												<!-- </div>/.single-single-contact-btn -->
+											<!-- </div>/.col -->
+										</div>
 									</form><!--/form-->
 								</div><!--/.contact-form-->
 							</div><!--/.single-contact-box-->
