--- a/index.html
+++ b/index.html
@@ -168,23 +168,18 @@
 					</div>
 					<div class="col-sm-offset-1 col-sm-5">
 						<div class="single-about-img">
-							<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+							<img src="assets/images/about/headshot.jpg" alt="profile_image">
 							<div class="about-list-icon">
 								<ul>
 									<li>
 										<a href="#">
-											<i class="fa fa-facebook" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
-									<li>
-										<a href="#">
-											<i class="fa fa-dribbble" aria-hidden="true"></i>
+											<i class="fa fa-envelope" aria-hidden="true"></i>
 										</a>
 
 									</li><!-- / li -->
 									<li>
 										<a href="#">
-											<i class="fa fa-twitter" aria-hidden="true"></i>
+											<i class="fa fa-phone" aria-hidden="true"></i>
 										</a>
 
 									</li><!-- / li -->
@@ -195,7 +190,7 @@
 									</li><!-- / li -->
 									<li>
 										<a href="#">
-											<i class="fa fa-instagram" aria-hidden="true"></i>
+											<i class="fa fa-github" aria-hidden="true"></i>
 										</a>
 									</li><!-- / li -->
 
@@ -244,6 +239,31 @@
 							</div><!--/.timeline-->
 						</div>
 					</div>
+					<!-- New section added here -->
+					<div class="col-sm-4">
+						<div class="single-horizontal-timeline">
+							<div class="experience-time">
+								<h2>2022 - 2023</h2>
+								<h3>UX Design<span> </span>Certification</h3>
+							</div><!--/.experience-time-->
+							<div class="timeline-horizontal-border">
+								<i class="fa fa-circle" aria-hidden="true"></i>
+								<span class="single-timeline-horizontal"></span>
+							</div>
+							<div class="timeline">
+								<div class="timeline-content">
+									<h4 class="title">
+										Google
+									</h4>
+									<h5>Remote</h5>
+									<p class="description">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+									</p>
+								</div><!--/.timeline-content-->
+							</div><!--/.timeline-->
+						</div>
+					</div>
+					<!-- End of new section -->
 					<div class="col-sm-4">
 						<div class="single-horizontal-timeline">
 							<div class="experience-time">
@@ -253,7 +273,7 @@
 							<div class="timeline-horizontal-border">
 								<i class="fa fa-circle" aria-hidden="true"></i>
 								<span class="single-timeline-horizontal"></span>
-								<i class="fa fa-circle" aria-hidden="true"></i>
+								<i class="fa fa-circle" aria-hidden="true"></i> <!-- Removed one circle here -->
 							</div>
 							<div class="timeline">
 								<div class="timeline-content">
@@ -267,12 +287,6 @@
 									</p>
 								</div><!--/.timeline-content-->
 							</div><!--/.timeline-->
-						</div>
-					</div>
-
-	
-							
-
 						</div>
 					</div>
 				</div>
@@ -590,7 +604,7 @@
 		<div class="portfolio-details">
 			<div class="section-heading text-center">
 				<h2>portfolio</h2>
-			</div>
+			</div>  
 			<div class="container">
 				<div class="portfolio-content">
 					<div class="isotope">
@@ -729,11 +743,10 @@
 							</div><!--/.contact-adress-->
 							<div class="hm-foot-icon">
 								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
-									<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
+									<li><a href="#"><i class="fa fa-envelope"></i></a></li><!--/li-->
+									<li><a href="#"><i class="fa fa-phone"></i></a></li><!--/li-->
 									<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
-									<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
+									<li><a href="#"><i class="fa fa-github"></i></a></li><!--/li-->
 								</ul><!--/ul-->
 							</div><!--/.hm-foot-icon-->
 						</div><!--/.single-contact-box-->
