Uploading landing page

--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
 								.start();
 						</script>
 						<br>
-
-
-						<a href="assets/download/browney.txt" download>download resume</a>
+						
+						<a href="assets/download/Mikayla's Resume.pdf" download id="download-button">Download Resume</a>
 					</div><!--/.header-text-->
 				</div><!--/.col-->
 			</div><!-- /.row-->
@@ -168,7 +167,7 @@
 					</div>
 					<div class="col-sm-offset-1 col-sm-5">
 						<div class="single-about-img">
-							<img src="assets/images/about/headshot.jpg" alt="profile_image">
+							<img src="assets/images/about/headshot.jpg" alt="Mikayla's Headshot Photo">
 							<div class="about-list-icon">
 								<ul>
 									<li>
@@ -729,7 +728,7 @@
 								<div class="contact-add-info">
 									<div class="single-contact-add-info">
 										<h3>phone</h3>
-										<p>906-204-6226</p>
+										<p>(906)204-6226</p>
 									</div>
 									<div class="single-contact-add-info">
 										<h3>email</h3>
