--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
 							<div class="col-sm-6">
 								<div class="item">
-									<img src="assets/images/portfolio/p1.jpg" alt="portfolio image" />
+									<img src="assets/images/portfolio/portphoto1.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
 											ui/ux design
@@ -619,7 +619,7 @@
 									</div><!-- /.isotope-overlay -->
 								</div><!-- /.item -->
 								<div class="item">
-									<img src="assets/images/portfolio/p2.jpg" alt="portfolio image" />
+									<img src="assets/images/portfolio/portphoto2.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
 											ui/ux design
@@ -630,7 +630,7 @@
 
 							<div class="col-sm-6">
 								<div class="item">
-									<img src="assets/images/portfolio/p4.jpg" alt="portfolio image" />
+									<img src="assets/images/portfolio/portphoto3.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
 											web development
@@ -638,7 +638,7 @@
 									</div><!-- /.isotope-overlay -->
 								</div><!-- /.item -->
 								<div class="item">
-									<img src="assets/images/portfolio/p5.jpg" alt="portfolio image" />
+									<img src="assets/images/portfolio/portpohoto4.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
 											web development
