--- a/index.html
+++ b/index.html
@@ -171,24 +171,24 @@
 							<div class="about-list-icon">
 								<ul>
 									<li>
-										<a href="#">
+										<a href="mailto: mikaylaslavin4@gmail.com">
 											<i class="fa fa-envelope" aria-hidden="true"></i>
 										</a>
 
 									</li><!-- / li -->
 									<li>
-										<a href="#">
+										<a href="tel:+19062046226">
 											<i class="fa fa-phone" aria-hidden="true"></i>
 										</a>
 
 									</li><!-- / li -->
 									<li>
-										<a href="#">
+										<a href="https://www.linkedin.com/in/mikaylaslavin/">
 											<i class="fa fa-linkedin" aria-hidden="true"></i>
 										</a>
 									</li><!-- / li -->
 									<li>
-										<a href="#">
+										<a href="https://github.com/mikaylaslavin">
 											<i class="fa fa-github" aria-hidden="true"></i>
 										</a>
 									</li><!-- / li -->
@@ -306,7 +306,7 @@
 					<div class="col-md-6">
 						<div class="single-skill-content">
 							<div class="barWrapper">
-								<span class="progressText">adobe photoshop</span>
+								<span class="progressText">user experience design</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="90"
@@ -318,7 +318,7 @@
 								</div>
 							</div><!-- /.barWrapper -->
 							<div class="barWrapper">
-								<span class="progressText">adobe illustrator</span>
+								<span class="progressText">user experience research</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="85"
@@ -330,7 +330,7 @@
 								</div>
 							</div><!-- /.barWrapper -->
 							<div class="barWrapper">
-								<span class="progressText">adobe after effects</span>
+								<span class="progressText">product design</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="97"
@@ -342,7 +342,7 @@
 								</div>
 							</div><!-- /.barWrapper -->
 							<div class="barWrapper">
-								<span class="progressText">sketch</span>
+								<span class="progressText">graphic design</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="90"
@@ -358,7 +358,7 @@
 					<div class="col-md-6">
 						<div class="single-skill-content">
 							<div class="barWrapper">
-								<span class="progressText">html 5</span>
+								<span class="progressText">figma</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="90"
@@ -370,7 +370,7 @@
 								</div>
 							</div><!-- /.barWrapper -->
 							<div class="barWrapper">
-								<span class="progressText">css 3 animation</span>
+								<span class="progressText">html 5</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="85"
@@ -382,7 +382,7 @@
 								</div>
 							</div><!-- /.barWrapper -->
 							<div class="barWrapper">
-								<span class="progressText">communication</span>
+								<span class="progressText">javascript</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="97"
@@ -394,7 +394,7 @@
 								</div>
 							</div><!-- /.barWrapper -->
 							<div class="barWrapper">
-								<span class="progressText"> creativity</span>
+								<span class="progressText"> css</span>
 								<div class="single-progress-txt">
 									<div class="progress ">
 										<div class="progress-bar" role="progressbar" aria-valuenow="90"
@@ -742,11 +742,12 @@
 							</div><!--/.contact-adress-->
 							<div class="hm-foot-icon">
 								<ul>
-									<li><a href="#"><i class="fa fa-envelope"></i></a></li><!--/li-->
-									<li><a href="#"><i class="fa fa-phone"></i></a></li><!--/li-->
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
-									<li><a href="#"><i class="fa fa-github"></i></a></li><!--/li-->
+									<li><a href="mailto: mikaylaslavin4@gmail.com"><i class="fa fa-envelope"></i></a></li><!--/li-->
+									<li><a href="tel:+19062046226"><i class="fa fa-phone"></i></a></li><!--/li-->
+									<li><a href="https://www.linkedin.com/in/mikaylaslavin/"><i class="fa fa-linkedin"></i></a></li><!--/li-->
+									<li><a href="https://github.com/mikaylaslavin"><i class="fa fa-github"></i></a></li><!--/li-->
 								</ul><!--/ul-->
+
 							</div><!--/.hm-foot-icon-->
 						</div><!--/.single-contact-box-->
 					</div><!--/.col-->
