Fixing mail icon

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 								<ul>
 									<li>
 										<a href="mailto: mikaylaslavin4@gmail.com">
-											<i class="fa fa-envelope" aria-hidden="true"></i>
+											<i class="fa fa-envelope" aria-hidden="true" style="margin-left: 5px;"></i>
 										</a>
 
 									</li><!-- / li -->
