--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 					<div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 						<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 							<li class=" smooth-menu active"></li>
-							<li class=" smooth-menu"><a href="#education">education</a></li>
-							<li class="smooth-menu"><a href="#skills">skills</a></li>
+							<li class="smooth-menu"><a href="#about">about</a></li>
 							<li class="smooth-menu"><a href="#experience">experience</a></li>
+							<li class=" smooth-menu"><a href="#education">education</a></li>
 							<li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
 							<li class="smooth-menu"><a href="#contact">contact</a></li>
 						</ul><!--/.nav -->
@@ -206,6 +206,190 @@
 	</section><!--/.about-->
 	<!--about end -->
 
+		<!--experience start -->
+		<section id="experience" class="experience">
+			<div class="section-heading text-center">
+				<h2>experience</h2>
+			</div>
+			<div class="container">
+				<div class="experience-content">
+					<div class="main-timeline">
+						<ul>
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-5">
+											<div class="experience-time text-right">
+												<h2>June  - July 2024</h2>
+												<h3>Web & Solutions Marketing Design INtern</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5">
+											<div class="timeline">
+												<div class="timeline-content">
+													<h4 class="title">
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Lenovo
+													</h4>
+													<h5>Morrisville, NC</h5>
+													<p class="description">
+														Duis aute irure dolor in reprehenderit in vol patate velit esse
+														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
+														cupidatat non proident.
+													</p>
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													Sept 2023 - Present
+												</h2>
+												<h3>associate design director</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-5">
+											<div class="timeline">
+												<div class="timeline-content text-right">
+													<h4 class="title">
+														MSU Burgess Institute for Entrepreneurship and Innovation
+													</h4>
+													<h5>East Lansing, MI</h5>
+													<p class="description">
+														Duis aute irure dolor in reprehenderit in vol patate velit esse
+														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
+														cupidatat non proident.
+													</p>
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5 experience-time-main">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													Sept 2023 - Present
+												</h2>
+												<h3>UX and graphic design intern</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-5">
+											<div class="experience-time text-right">
+												<h2>May - Aug 2023</h2>
+												<h3>UX Design Intern</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5">
+											<div class="timeline">
+												<div class="timeline-content">
+													<h4 class="title">
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Avanade Inc.
+													</h4>
+													<h5>Chicago, IL</h5>
+													<p class="description">
+														Duis aute irure dolor in reprehenderit in vol patate velit esse
+														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
+														cupidatat non proident.
+													</p>
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													May - Aug 2023
+												</h2>
+												<h3>UX Design Intern</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-5">
+											<div class="timeline">
+												<div class="timeline-content text-right">
+													<h4 class="title">
+														Michigan State AIGA
+													</h4>
+													<h5>East Lansing, MI</h5>
+													<p class="description">
+														Duis aute irure dolor in reprehenderit in vol patate velit esse
+														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
+														cupidatat non proident.
+													</p>
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5 experience-time-main">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													Nov 2022 - Present
+												</h2>
+												<h3>Vice President</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-5">
+											<div class="experience-time text-right">
+												<h2>Aug - Nov 2022</h2>
+												<h3>Communications Director</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5">
+											<div class="timeline">
+												<div class="timeline-content">
+													<h4 class="title">
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Michigan State AIGA
+													</h4>
+													<h5>East Lansing, MI</h5>
+													<p class="description">
+														Duis aute irure dolor in reprehenderit in vol patate velit esse
+														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
+														cupidatat non proident.
+													</p>
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+						</ul>
+					</div><!--.main-timeline-->
+				</div><!--.experience-content-->
+			</div>
+	
+		</section><!--/.experience-->
+		<!--experience end -->
+
 	<!--education start -->
 	<section id="education" class="education">
 		<div class="section-heading text-center">
@@ -294,309 +478,6 @@
 
 	</section><!--/.education-->
 	<!--education end -->
-
-	<!--skills start -->
-	<section id="skills" class="skills">
-		<div class="skill-content">
-			<div class="section-heading text-center">
-				<h2>skills</h2>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="single-skill-content">
-							<div class="barWrapper">
-								<span class="progressText">user experience design</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="90"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>90%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-							<div class="barWrapper">
-								<span class="progressText">user experience research</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="85"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>85%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-							<div class="barWrapper">
-								<span class="progressText">product design</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="97"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>97%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-							<div class="barWrapper">
-								<span class="progressText">graphic design</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="90"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>90%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="single-skill-content">
-							<div class="barWrapper">
-								<span class="progressText">figma</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="90"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>90%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-							<div class="barWrapper">
-								<span class="progressText">html 5</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="85"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>85%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-							<div class="barWrapper">
-								<span class="progressText">javascript</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="97"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>97%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-							<div class="barWrapper">
-								<span class="progressText"> css</span>
-								<div class="single-progress-txt">
-									<div class="progress ">
-										<div class="progress-bar" role="progressbar" aria-valuenow="90"
-											aria-valuemin="10" aria-valuemax="100" style="">
-
-										</div>
-									</div>
-									<h3>90%</h3>
-								</div>
-							</div><!-- /.barWrapper -->
-						</div>
-					</div>
-				</div><!-- /.row -->
-			</div> <!-- /.container -->
-		</div><!-- /.skill-content-->
-
-	</section><!--/.skills-->
-	<!--skills end -->
-
-	<!--experience start -->
-	<section id="experience" class="experience">
-		<div class="section-heading text-center">
-			<h2>experience</h2>
-		</div>
-		<div class="container">
-			<div class="experience-content">
-				<div class="main-timeline">
-					<ul>
-						<li>
-							<div class="single-timeline-box fix">
-								<div class="row">
-									<div class="col-md-5">
-										<div class="experience-time text-right">
-											<h2>June  - July 2024</h2>
-											<h3>Web & Solutions Marketing Design INtern</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-									<div class="col-md-offset-1 col-md-5">
-										<div class="timeline">
-											<div class="timeline-content">
-												<h4 class="title">
-													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Lenovo
-												</h4>
-												<h5>Morrisville, NC</h5>
-												<p class="description">
-													Duis aute irure dolor in reprehenderit in vol patate velit esse
-													cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-													cupidatat non proident.
-												</p>
-											</div><!--/.timeline-content-->
-										</div><!--/.timeline-->
-									</div><!--/.col-->
-								</div>
-							</div><!--/.single-timeline-box-->
-						</li>
-
-						<li>
-							<div class="single-timeline-box fix">
-								<div class="row">
-									<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-										<div class="experience-time">
-											<h2>
-												<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-												Sept 2023 - Present
-											</h2>
-											<h3>associate design director</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-									<div class="col-md-5">
-										<div class="timeline">
-											<div class="timeline-content text-right">
-												<h4 class="title">
-													MSU Burgess Institute for Entrepreneurship and Innovation
-												</h4>
-												<h5>East Lansing, MI</h5>
-												<p class="description">
-													Duis aute irure dolor in reprehenderit in vol patate velit esse
-													cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-													cupidatat non proident.
-												</p>
-											</div><!--/.timeline-content-->
-										</div><!--/.timeline-->
-									</div><!--/.col-->
-									<div class="col-md-offset-1 col-md-5 experience-time-main">
-										<div class="experience-time">
-											<h2>
-												<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-												Sept 2023 - Present
-											</h2>
-											<h3>UX and graphic design intern</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-								</div>
-							</div><!--/.single-timeline-box-->
-						</li>
-
-						<li>
-							<div class="single-timeline-box fix">
-								<div class="row">
-									<div class="col-md-5">
-										<div class="experience-time text-right">
-											<h2>May - Aug 2023</h2>
-											<h3>UX Design Intern</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-									<div class="col-md-offset-1 col-md-5">
-										<div class="timeline">
-											<div class="timeline-content">
-												<h4 class="title">
-													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Avanade Inc.
-												</h4>
-												<h5>Chicago, IL</h5>
-												<p class="description">
-													Duis aute irure dolor in reprehenderit in vol patate velit esse
-													cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-													cupidatat non proident.
-												</p>
-											</div><!--/.timeline-content-->
-										</div><!--/.timeline-->
-									</div><!--/.col-->
-								</div>
-							</div><!--/.single-timeline-box-->
-						</li>
-
-						<li>
-							<div class="single-timeline-box fix">
-								<div class="row">
-									<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-										<div class="experience-time">
-											<h2>
-												<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-												May - Aug 2023
-											</h2>
-											<h3>UX Design Intern</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-									<div class="col-md-5">
-										<div class="timeline">
-											<div class="timeline-content text-right">
-												<h4 class="title">
-													Michigan State AIGA
-												</h4>
-												<h5>East Lansing, MI</h5>
-												<p class="description">
-													Duis aute irure dolor in reprehenderit in vol patate velit esse
-													cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-													cupidatat non proident.
-												</p>
-											</div><!--/.timeline-content-->
-										</div><!--/.timeline-->
-									</div><!--/.col-->
-									<div class="col-md-offset-1 col-md-5 experience-time-main">
-										<div class="experience-time">
-											<h2>
-												<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-												Nov 2022 - Present
-											</h2>
-											<h3>Vice President</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-								</div>
-							</div><!--/.single-timeline-box-->
-						</li>
-
-						<li>
-							<div class="single-timeline-box fix">
-								<div class="row">
-									<div class="col-md-5">
-										<div class="experience-time text-right">
-											<h2>Aug - Nov 2022</h2>
-											<h3>Communications Director</h3>
-										</div><!--/.experience-time-->
-									</div><!--/.col-->
-									<div class="col-md-offset-1 col-md-5">
-										<div class="timeline">
-											<div class="timeline-content">
-												<h4 class="title">
-													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Michigan State AIGA
-												</h4>
-												<h5>East Lansing, MI</h5>
-												<p class="description">
-													Duis aute irure dolor in reprehenderit in vol patate velit esse
-													cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-													cupidatat non proident.
-												</p>
-											</div><!--/.timeline-content-->
-										</div><!--/.timeline-->
-									</div><!--/.col-->
-								</div>
-							</div><!--/.single-timeline-box-->
-						</li>
-
-					</ul>
-				</div><!--.main-timeline-->
-			</div><!--.experience-content-->
-		</div>
-
-	</section><!--/.experience-->
-	<!--experience end -->
 
 	<!--portfolio start -->
 	<section id="portfolio" class="portfolio">
