--- a/index.html
+++ b/index.html
@@ -150,17 +150,13 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								I am a Professional UI/UX Designer and Web developer. Consectetur an adipisi elita, sed
-								do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-								quis nostrud.
+								I'm a UX designer aiming to amplify the human experience through accessible and meaningful designs. I'm currently designing @ the MSU Burgess Institute for Entrepreneurship and Innovation!
 							</h3>
 							<p>
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-								nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-								officia deserunt mollit anim id est laborum. Sed ut perspi unde omnis iste natus error
-								sit voluptatem accusantium doloremque lauda ntium, totam rem aperiam, eaque ipsa quae ab
-								illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
-								enim ipsam vo luptatem quia voluptas sit aspernatur aut odit aut fugit,
+
+								I recently graduated with a Bachelor of Arts in Information Science from Michigan State University. I concentrated on Human Centered Technologies and pursued minors in Graphic Design and Business. Furthermore, I was heavily involved in designing for student startup ventures at the MSU Burgess Institute for Entrepreneurship and Innovation. Alongside, I served as the Vice President of the Michigan State Chapter of the American Institute of Graphic Arts and was a member of the MSU Student Allocation Board. 
+
+								Now that I've graduated, I'm looking forward to furthering my education with a Masters in HCI, set to graduate in May 2025. My ultimate goal is to pursue a career in UX Design. This summer, I'm excited to embark on a new journey as a Marketing Design Intern at Lenovo.
 							</p>
 
 						</div>
@@ -233,9 +229,7 @@
 													</h4>
 													<h5>Morrisville, NC</h5>
 													<p class="description">
-														Duis aute irure dolor in reprehenderit in vol patate velit esse
-														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-														cupidatat non proident.
+													As a Marketing Design Intern, I will be designing PowerPoint presentations for various audiences, conducting research to  support asset content and create visual elements to enhance presentations. Furthermore, I will collaborate with the marketing team to ensure consistency with branding, and contribute to content audits and project manage web translation tasks.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -264,9 +258,7 @@
 													</h4>
 													<h5>East Lansing, MI</h5>
 													<p class="description">
-														Duis aute irure dolor in reprehenderit in vol patate velit esse
-														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-														cupidatat non proident.
+														As a UX & graphic design intern, I consult with student startup ventures for design needs, conduct various forms of user research, perform usability testing, develop design concepts in wireframes and prototypes, and assist students in the implementation and launch of their design.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -302,9 +294,7 @@
 													</h4>
 													<h5>Chicago, IL</h5>
 													<p class="description">
-														Duis aute irure dolor in reprehenderit in vol patate velit esse
-														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-														cupidatat non proident.
+														As a UX design intern, I collaborated within a cross-functional team to create digital experiences tailored for Avanade client, conducted various forms of user research and analysis, designed intuitive wireframes and interactive prototypes for a healthcare website, and adapted design strategies to align with client needs.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -333,9 +323,8 @@
 													</h4>
 													<h5>East Lansing, MI</h5>
 													<p class="description">
-														Duis aute irure dolor in reprehenderit in vol patate velit esse
-														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-														cupidatat non proident.
+														As vice president of Michigan State AIGA, I collaborate with the President to ensure the seamless
+														operation of the club, deliver informative presentations aimed towards design, plan and execute various design meetings and events, and previously designed the MSU AIGA website.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -371,9 +360,7 @@
 													</h4>
 													<h5>East Lansing, MI</h5>
 													<p class="description">
-														Duis aute irure dolor in reprehenderit in vol patate velit esse
-														cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat
-														cupidatat non proident.
+														As the communications director of Michigan State AIGA, I designed and developed the club's website while continuously maintaining it through the semester. In addition, I sent out news letters to club members to keep them informed.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -415,8 +402,7 @@
 									</h4>
 									<h5>East Lansing, MI</h5>
 									<p class="description">
-										Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu
-										fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident.
+										Throughout this program, I'll be immersed in courses focusing on user experience research, honing my skills in understanding user behaviors and preferences to create meaningful digital experiences.
 									</p>
 								</div><!--/.timeline-content-->
 							</div><!--/.timeline-->
@@ -440,7 +426,7 @@
 									</h4>
 									<h5>East Lansing, MI</h5>
 									<p class="description">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+										Specializing in Human-Centered Technologies, I complemented my degree with minors in Graphic Design and Business. This combination equipped me with a holistic understanding of user-centric design principles.
 									</p>
 								</div><!--/.timeline-content-->
 							</div><!--/.timeline-->
@@ -465,8 +451,7 @@
 									</h4>
 									<h5>Remote</h5>
 									<p class="description">
-										Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu
-										fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident.
+									Throughout seven courses, I participated in interactive lessons, practical exercises, and real-world projects to develop a deep understanding of UX principles and methodologies. 
 									</p>
 								</div><!--/.timeline-content-->
 							</div><!--/.timeline-->
@@ -495,7 +480,7 @@
 									<img src="assets/images/portfolio/portphoto1.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
-											ui/ux design
+											Coming Soon
 										</a>
 									</div><!-- /.isotope-overlay -->
 								</div><!-- /.item -->
@@ -503,7 +488,7 @@
 									<img src="assets/images/portfolio/portphoto2.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
-											ui/ux design
+											Coming Soon
 										</a>
 									</div><!-- /.isotope-overlay -->
 								</div><!-- /.item -->
@@ -514,7 +499,7 @@
 									<img src="assets/images/portfolio/portphoto3.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
-											web development
+											Coming Soon
 										</a>
 									</div><!-- /.isotope-overlay -->
 								</div><!-- /.item -->
@@ -522,7 +507,7 @@
 									<img src="assets/images/portfolio/portpohoto4.png" alt="portfolio image" />
 									<div class="isotope-overlay">
 										<a href="#">
-											web development
+											Coming Soon
 										</a>
 									</div><!-- /.isotope-overlay -->
 								</div><!-- /.item -->
