--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						</script>
 						<br>
 
-						<a href="assets/download/Mikayla's Resume.pdf" download id="download-button">Download Resume</a>
+						<a href="assets/download/Mikayla Slavin's Resume.pdf" download id="download-button">Download Resume</a>
 					</div><!--/.header-text-->
 				</div><!--/.col-->
 			</div><!-- /.row-->
