--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 													Sept 2023 - Present
 												</h2>
-												<h3>associate design director</h3>
+												<h3>Ux & Graphic Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-5">
@@ -312,7 +312,7 @@
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 													May - Aug 2023
 												</h2>
-												<h3>UX Design Intern</h3>
+												<h3>Vice President</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-5">
