--- a/index.html
+++ b/index.html
@@ -117,15 +117,23 @@
 
 							typewriter
 								.typeString('UX Designer')
-								.pauseFor(50)
-								.pauseFor(50)
+								.pauseFor(40)
+								.pauseFor(40)
 								.deleteChars(8)
 								.typeString('Researcher')
-								.pauseFor(50)
+								.pauseFor(40)
 								.deleteAll()
-								.pauseFor(50)
+								.pauseFor(40)
 								.deleteChars(7)
+								.typeString('Web Designer')
+								.pauseFor(40)
+								.pauseFor(40)
+								.deleteChars(12)
 								.typeString('Graphic Designer')
+								.pauseFor(40)
+								.pauseFor(40)
+								.deleteChars(17)
+								.typeString('Game UI Designer')
 								.start();
 						</script>
 						<br>
