--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>June  - July 2024</h2>
-												<h3>Web & Solutions Marketing Design INtern</h3>
+												<h2>August 2024  - Present</h2>
+												<h3>UX Research Intern</h3>	
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-offset-1 col-md-5">
@@ -235,9 +235,9 @@
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														Lenovo
 													</h4>
-													<h5>Morrisville, NC</h5>
+													<h5>Remote</h5>
 													<p class="description">
-													As a Marketing Design Intern, I will be designing PowerPoint presentations for various audiences, conducting research to  support asset content and create visual elements to enhance presentations. Furthermore, I will collaborate with the marketing team to ensure consistency with branding, and contribute to content audits and project manage web translation tasks.
+														As a UX Research Intern at Lenovo, I conducted and analyzed user interviews, utilizing various tools to create highlight reels that uncovered key insights. I synthesized this data into actionable insights and presented my findings to align stakeholders and inform design decisions. Additionally, I organized research findings into visual frameworks to identify patterns and guide team strategies. I also conducted audits, presenting findings to leadership, addressing UX issues, and providing recommendations for improvement to enhance the user experience.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -253,20 +253,20 @@
 											<div class="experience-time">
 												<h2>
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Sept 2023 - Present
+													June - August 2023
 												</h2>
-												<h3>Ux & Graphic Design Intern</h3>
+												<h3>Web & Solutions Marketing Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-5">
 											<div class="timeline">
 												<div class="timeline-content text-right">
 													<h4 class="title">
-														MSU Burgess Institute for Entrepreneurship and Innovation
+														Lenovo
 													</h4>
-													<h5>East Lansing, MI</h5>
+													<h5>Morrisville, NC</h5>
 													<p class="description">
-														As a UX & graphic design intern, I consult with student startup ventures for design needs, conduct various forms of user research, perform usability testing, develop design concepts in wireframes and prototypes, and assist students in the implementation and launch of their design.
+														As a Web & Solutions Marketing Design Intern at Lenovo, I designed customer-facing assets, including infographics and presentations, ensuring they adhered to branding standards. I conducted audits of high-profile web pages and assets to assess their accuracy, branding consistency, and functionality, providing recommendations for updates. Additionally, I redesigned an external company website to better align with corporate guidelines and enhance the overall user experience.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -275,9 +275,9 @@
 											<div class="experience-time">
 												<h2>
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Sept 2023 - Present
+													June - August 2024
 												</h2>
-												<h3>UX and graphic design intern</h3>
+												<h3>Web & Solutions Marketing Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 									</div>
@@ -289,50 +289,48 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>May - Aug 2023</h2>
+												<h2>September 2024 - Present</h2>
+												<h3>Graduate UX Research Assistant</h3>
+											</div><!--/.experience-time-->
+										</div><!--/.col-->
+										<div class="col-md-offset-1 col-md-5">
+											<div class="timeline">
+												<div class="timeline-content">
+													<h4 class="title">
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														SPARTIE Lab
+													</h4>
+													<h5>East Lansing, MI</h5>
+													<p class="description">
+														As a Graduate UX Research Assistant at SPARTIE Lab (The Social and Psychological Approaches to Research on Technology-Interaction Effects), I led the redesign of the lab's external website, focusing on improving accessibility, functionality, and the overall user experience. I conducted comprehensive user research, including user interviews and usability testing, to gather insights that informed design improvements. Additionally, I analyzed the website's backend to ensure compliance with accessibility standards and best practices, ensuring a more inclusive and efficient user experience.
+												</div><!--/.timeline-content-->
+											</div><!--/.timeline-->
+										</div><!--/.col-->
+									</div>
+								</div><!--/.single-timeline-box-->
+							</li>
+	
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+											<div class="experience-time">
+												<h2>
+													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+													May - August 2023
+												</h2>
 												<h3>UX Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
-										<div class="col-md-offset-1 col-md-5">
-											<div class="timeline">
-												<div class="timeline-content">
-													<h4 class="title">
-														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Avanade Inc.
-													</h4>
-													<h5>Chicago, IL</h5>
-													<p class="description">
-														As a UX design intern, I collaborated within a cross-functional team to create digital experiences tailored for Avanade client, conducted various forms of user research and analysis, designed intuitive wireframes and interactive prototypes for a healthcare website, and adapted design strategies to align with client needs.
-													</p>
-												</div><!--/.timeline-content-->
-											</div><!--/.timeline-->
-										</div><!--/.col-->
-									</div>
-								</div><!--/.single-timeline-box-->
-							</li>
-	
-							<li>
-								<div class="single-timeline-box fix">
-									<div class="row">
-										<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-											<div class="experience-time">
-												<h2>
-													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													May - Aug 2023
-												</h2>
-												<h3>Vice President</h3>
-											</div><!--/.experience-time-->
-										</div><!--/.col-->
 										<div class="col-md-5">
 											<div class="timeline">
 												<div class="timeline-content text-right">
 													<h4 class="title">
-														Michigan State AIGA
+														Avanade
 													</h4>
-													<h5>East Lansing, MI</h5>
+													<h5>Chicago, IL</h5>
 													<p class="description">
-														As vice president of Michigan State AIGA, I collaborate with the President to ensure the seamless
-														operation of the club, deliver informative presentations aimed towards design, plan and execute various design meetings and events, and previously designed the MSU AIGA website.
+														As a UX Design Intern at Avanade, I collaborated within a cross-functional team to design digital experiences that enhanced user engagement for Avanade clients. I employed a range of user research methods, including interviews and usability testing, to gather insights that informed key design decisions. Additionally, I designed intuitive wireframes and developed interactive prototypes, ensuring that the final products aligned with both business goals and user needs, contributing to a seamless and engaging user experience.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -341,9 +339,9 @@
 											<div class="experience-time">
 												<h2>
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-													Nov 2022 - Present
+													May - August 2023
 												</h2>
-												<h3>Vice President</h3>
+												<h3>UX Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 									</div>
@@ -355,8 +353,8 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>Aug - Nov 2022</h2>
-												<h3>Communications Director</h3>
+												<h2>September 2023 - Present</h2>
+												<h3>UX & Graphic Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-offset-1 col-md-5">
@@ -364,11 +362,10 @@
 												<div class="timeline-content">
 													<h4 class="title">
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Michigan State AIGA
-													</h4>
+														MSU Burgess Institute for Entrepreneurship & Innovation
 													<h5>East Lansing, MI</h5>
 													<p class="description">
-														As the communications director of Michigan State AIGA, I designed and developed the club's website while continuously maintaining it through the semester. In addition, I sent out news letters to club members to keep them informed.
+														As a UX & Graphic Design Intern at the MSU Burgess Institute for Entrepreneurship and Innovation, I collaborated with student startups to address design needs through creative problem-solving and strategic consultation. I conducted user research and usability testing to inform design decisions, using insights to refine and improve solutions. I also developed and iterated on wireframes and prototypes to conceptualize user-centered designs. In addition, I supported students in implementing their designs, offering guidance on best practices and ensuring technical execution aligned with their goals.
 													</p>
 												</div><!--/.timeline-content-->
 											</div><!--/.timeline-->
@@ -637,7 +634,7 @@
 		<div class="container">
 			<div class="hm-footer-copyright text-center">
 				<p>
-					&copy; copyright Mikayla Slavin.<a href="https://www.themesine.com/"></a>
+					&copy; copyright Mikayla Slavin. <a href="https://www.themesine.com/"></a>
 				</p><!--/p-->
 			</div><!--/.text-center-->
 		</div><!--/.container-->
