updated about me

--- a/index.html
+++ b/index.html
@@ -158,13 +158,12 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								I'm a UX designer aiming to amplify the human experience through accessible and meaningful designs. I'm currently designing @ the MSU Burgess Institute for Entrepreneurship and Innovation!
+								Welcome to my digital habitat! I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a Graduate UX Research Assistant at Spartie Lab.
+
+
 							</h3>
 							<p>
-
-								I recently graduated with a Bachelor of Arts in Information Science from Michigan State University. I concentrated on Human Centered Technologies and pursued minors in Graphic Design and Business. Furthermore, I was heavily involved in designing for student startup ventures at the MSU Burgess Institute for Entrepreneurship and Innovation. Alongside, I served as the Vice President of the Michigan State Chapter of the American Institute of Graphic Arts and was a member of the MSU Student Allocation Board. 
-
-								Now that I've graduated, I'm looking forward to furthering my education with a Masters in HCI, set to graduate in May 2025. My ultimate goal is to pursue a career in UX Design. This summer, I'm excited to embark on a new journey as a Marketing Design Intern at Lenovo.
+								Currently pursuing my Master's in Human-Computer Interaction at Michigan State University, I'm deepening my expertise in both user research and design. Set to graduate in May 2025, I also bring a diverse background in marketing design, graphic design, and game UI design. This blend of skills fuels my passion for crafting innovative, user-centered solutions. I'm eager to contribute to innovative teams focused on creating meaningful experiences that shape the future of technology. Every project I tackle is driven by curiosity and a commitment to creating experiences that truly make an impact.
 							</p>
 
 						</div>
