--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 							<div class="contact-adress">
 								<div class="contact-add-head">
 									<h3>Mikayla Slavin</h3>
-									<p>UX designer</p>
+									<p>UX Designer & Researcher</p>
 								</div>
 								<div class="contact-add-info">
 									<div class="single-contact-add-info">
