--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								Welcome to my digital habitat! I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a Graduate UX Research Assistant at Spartie Lab.
+								Welcome to my digital sandbox! I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a Graduate UX Research Assistant at Spartie Lab.
 
 
 							</h3>
