--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 							</h3>
 							<p>
-								Currently pursuing my Master's in Human-Computer Interaction at Michigan State University, I'm deepening my expertise in both user research and design. Set to graduate in May 2025, I also bring a diverse background in marketing design, graphic design, and game UI design. This blend of skills fuels my passion for crafting innovative, user-centered solutions. I'm eager to contribute to innovative teams focused on creating meaningful experiences that shape the future of technology. Every project I tackle is driven by curiosity and a commitment to creating experiences that truly make an impact.
+								Currently pursuing my Master's in Human-Computer Interaction at Michigan State University, I'm deepening my expertise in both user research and design. Set to graduate in May 2025, I also bring a diverse background in marketing design, graphic design, and game UI design. This blend of skills fuels my passion for crafting innovative, user-centered solutions. I'm eager to contribute to innovative teams focused on creating meaningful and impactful experiences that shape the future of technology. 
 							</p>
 
 						</div>
