--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								Welcome to my digital sandbox! I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a Graduate UX Research Assistant at Spartie Lab.
+								Welcome to my digital sandbox! I'm a passionate designer & researcher on a mission to elevate the human experience with impactful designs. Right now, I'm diving into user research at Lenovo, crafting design solutions at the MSU Burgess Institute, and uncovering insights as a UX research assistant at Spartie Lab.
 
 
 							</h3>
 							<p>
-								Currently pursuing my Master's in Human-Computer Interaction at Michigan State University, I'm deepening my expertise in both user research and design. Set to graduate in May 2025, I also bring a diverse background in marketing design, graphic design, and game UI design. This blend of skills fuels my passion for crafting innovative, user-centered solutions. I'm eager to contribute to innovative teams focused on creating meaningful and impactful experiences that shape the future of technology. 
+								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my expertise in both user research and design. Set to graduate in May 2025, I also bring a diverse background in marketing design, graphic design, and game UI design. This blend of skills fuels my passion for crafting innovative, user-centered solutions. I'm eager to contribute to innovative teams focused on creating meaningful and impactful experiences that shape the future of technology. 
 							</p>
 
 						</div>
