--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="header-text">
-						<h2>Hello, I'm <span></span> Mikayla! <br> I create experiences that click. <span></span> </h2>
+						<h2>Hello, I'm <span></span> Mikayla! <br> I create experiences that click.🖱️ <span></span> </h2>
 
 						<!-- <p>UX DESIGNER</p> -->
 						<!-- <p id="typewriter">UX DESIGNER</p> -->
@@ -150,7 +150,7 @@
 	<!--about start -->
 	<section id="about" class="about">
 		<div class="section-heading text-center">
-			<h2>about me</h2>
+			<h2>about me🍓</h2>
 		</div>
 		<div class="container">
 			<div class="about-content">
@@ -212,7 +212,7 @@
 		<!--experience start -->
 		<section id="experience" class="experience">
 			<div class="section-heading text-center">
-				<h2>experience</h2>
+				<h2>experience👩🏻‍💻</h2>
 			</div>
 			<div class="container">
 				<div class="experience-content">
@@ -384,7 +384,7 @@
 	<!--education start -->
 	<section id="education" class="education">
 		<div class="section-heading text-center">
-			<h2>education</h2>
+			<h2>education🎓</h2>
 		</div>
 		<div class="container">
 			<div class="education-horizontal-timeline">
@@ -472,7 +472,7 @@
 	<section id="portfolio" class="portfolio">
 		<div class="portfolio-details">
 			<div class="section-heading text-center">
-				<h2>portfolio</h2>
+				<h2>portfolio under construction👷‍♀️</h2>
 			</div>  
 			<div class="container">
 				<div class="portfolio-content">
@@ -528,7 +528,7 @@
 	<!--contact start -->
 	<section id="contact" class="contact">
 		<div class="section-heading text-center">
-			<h2>contact me</h2>
+			<h2>contact me☎️</h2>
 		</div>
 		<div class="container">
 			<div class="contact-content">
